Changes in dropdown menus in Nodes. Long text is no longer overlapping dropdown arrow

--- a/src/stylesheets/filters.less
+++ b/src/stylesheets/filters.less
@@ -6,13 +6,13 @@
 }
 
 .Select-environment{
-  width:70px;
+  width:100px;
 }
 .Select-application{
   width:250px;
 }
 .Select-environmentclass{
-  width:80px;
+  width:90px;
 }
 .Select-nodetype{
   width:150px;
@@ -25,4 +25,8 @@
 .Input-alias{
   width:200px;
   white-space: nowrap;
+}
+
+.Select-value{
+  padding-right: 25px !important;
 }
